# goldenview

./: README.md  benchmark.py  debug_performance.py  pyproject.toml  run_full_analysis.py  run_russian_hill_analysis.py  viewpoints.json  viewpoints_map.html  viewpoints_real.json  visibility_checker.py  visibility_checker_instrumented.py  visibility_checker_optimized.py  visibility_results.json  visibility_results_russian_hill.json  visualize_results.py  visualize_visibility_results.py
data/: Building_Footprints_20251130_truncated.csv  README.md  test_buildings_grid.csv
docs/: notes.md  procedure.md  todo.md
