[tool.poetry]
name = "goldenview"
version = "0.1.0"
description = ""
authors = ["Steve Warner <steve.j.warner@gmail.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
shapely = "^2.0.0"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
